# python_learning

./: 99bottles.py  README.md  Test.py  addition.py  alice.py  average.py  c_and_d.py  coffee.py  count_words.py  dice_roll.py  drawRect.py  drawRect2.py  every15minAlt.py  every15minute.py  exceptions.py  fav_number.py  funny_names.py  handshake.py  leap_Year.py  median.py  mode.py  mult_table.py  passw_gen.py  path.py  polinom.py  poor_man_bar_chart.py  pyproject.toml  read_fav_number.py  read_names.py  replace_text.py  rock_paper_scissors.py  sum_and_product.py  test1.py  upper.py  user_data.py  username.py  valid_date.py  write_guest.py
test/: def getHoursMinutesSeconds(totalSeconds).py  tempCodeRunnerFile.python  test_calc.py  username.json
